--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "cross-env": "^7.0.3",
     "isbot": "^4.4.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "ts-node": "^10.9.2"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.15.3",
@@ -38,6 +37,7 @@
     "express": "^4.21.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.1.6",
     "vite": "^5.4.14",
     "vite-tsconfig-paths": "^4.2.1"
