--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "type": "module",
   "scripts": {
     "build": "remix vite:build",
+    "build:server": "tsc --project tsconfig.server.json",
     "dev": "remix vite:dev & npm run dev:server",
     "dev:server": "NODE_ENV=development node --import 'data:text/javascript,import { register } from \"node:module\"; import { pathToFileURL } from \"node:url\"; register(\"ts-node/esm\", pathToFileURL(\"./\"));' app/server.ts",
     "deploy:server": "NODE_ENV=production node build/server/index.js",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix-serve ./build/server/index.js",
+    "start": "NODE_ENV=production node build/server/index.js",
+    "start:server": "NODE_ENV=production node build/server/index.js",
     "typecheck": "tsc"
   },
   "dependencies": {
