Update server build output directory to 'backend'

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "ESNext",
     "moduleResolution": "node",
-    "outDir": "build/server",
+    "outDir": "build/backend",
     "noEmit": false
   },
   "include": ["app/server/**/*"],
